event details changes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Event results</a></li>
-          <li><a href="#portfolio">Gallery</a></li>
+          <li><a href="#services">Event Details</a></li>
+          <li><a href="">Gallery</a></li>
           <li><a href="#team">Core Committee</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -153,6 +153,120 @@
         </div>
       </div>
     </section><!-- #about -->
+    <section id="team">
+
+      <div class="container wow fadeIn">
+        <div class="col-lg-auto col-md-1 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="section-header">
+            <h3 class="section-title section-description" style="color: #111!important; background-color: transparent;">
+              Core Committee</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <h3 style="text-align: left;" class="abouts">Faculty Incharge</h3>
+              <div class="">
+                <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;color: #111;">
+                  <a href="https://www.ssn.edu.in/staff-members/dr-r-sundareswaran/" style="color: #111;">Dr. R.
+                    Sundareswaran (ASP)</a>
+                  <br>
+                  <a href="https://www.ssn.edu.in/staff-members/dr-m-shanmugapriya/" style="color: #111;">Dr. M.
+                    Shanmugapriya (AP)</a>
+                  <br>
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h3 style="text-align: left;" class="abouts">Event Coordinators</h3>
+              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem">
+                <a href="https://wa.me/917639025362" style="color: #111;">Prasanna - 3rd year CHEM</a>
+                <br>
+                <a href="https://wa.me/919384691387" style="color: #111;">Shri Thrisha - 3rd year BME</a>
+                <br>
+                <a href="https://wa.me/919944937594" style="color:#111">Keerthivasan M - 3rd year CIVIL</a>
+                <br>
+                <a href="https://wa.me/918667030250" style="color: #111;">Preethi B - 3rd year CSE</a>
+                <br>
+                <a href="https://wa.me/919080082025" style="color: #111;">Dhanya - 3rd year CSE</a>
+                <br>
+
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h3 id="gal" style="text-align: left;" class="abouts">Website</h3>
+              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;">
+                <a href="https://github.com/vspr14" style="color:#111">V S Pranav - 2nd year CSE</a>
+                <a href="https://github.com/vspr14" style="color:#111">Sanjai Balajee - 2nd year CSE</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container wow fadeIn">
+        <div class="col-lg-auto col-md-6 wow fadeInUp" data-wow-delay="0.9s">
+          <div class="section-header">
+            <h3 class="section-title section-description" style="color: #111!important; background-color: transparent;">
+              Overall</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <h3 style="text-align: left;" class="abouts">Faculty Incharge</h3>
+              <div class="">
+                <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;color: #111;">
+                  <a href="https://www.ssn.edu.in/staff-members/dr-r-sundareswaran/" style="color: #111;">Dr. R.
+                    Sundareswaran (ASP)</a>
+                  <br>
+                  <a href="https://www.ssn.edu.in/staff-members/dr-m-shanmugapriya/" style="color: #111;">Dr. M.
+                    Shanmugapriya (AP)</a>
+                  <br>
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h3 style="text-align: left;" class="abouts">Event Coordinators</h3>
+              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem">
+                <a href="https://wa.me/917639025362" style="color: #111;">Prasanna - 3rd year CHEM</a>
+                <br>
+                <a href="https://wa.me/919384691387" style="color: #111;">Shri Thrisha - 3rd year BME</a>
+                <br>
+                <a href="https://wa.me/919944937594" style="color:#111">Keerthivasan M - 3rd year CIVIL</a>
+                <br>
+                <a href="https://wa.me/918667030250" style="color: #111;">Preethi B - 3rd year CSE</a>
+                <br>
+                <a href="https://wa.me/919080082025" style="color: #111;">Dhanya - 3rd year CSE</a>
+                <br>
+
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <h3 id="gal" style="text-align: left;" class="abouts">Website</h3>
+              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;">
+                <a href="https://github.com/vspr14" style="color:#111">V S Pranav - 2nd year CSE</a>
+                <a href="https://github.com/vspr14" style="color:#111">Sanjai Balajee - 2nd year CSE</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
     <!--
     <section id ="chief">
     	<div class="container">
@@ -236,22 +350,23 @@
             </div>
           </div>
         -->
-      <h2 style="padding-top: 10px;text-align: center;background:transparent; width: 100%; color:black;" class="abouts">
-        Event Details</h2>
-      <!-- Greetings from the Department of Mathematics, Sri Sivasubramaniya Nadar College of Engineering, Chennai.<br>
+      <div class="section-header">
+        <h2 class="section-title section-description"
+          style="text-align: center;background:transparent; width: 100%; color:black;" class="abouts">
+          Event Details</h2>
+        <!-- Greetings from the Department of Mathematics, Sri Sivasubramaniya Nadar College of Engineering, Chennai.<br>
         The Department of Mathematics is organizing a National Level Math Symosium – 2023 on 31.03.2022 (Friday). -->
-
+      </div>
 
       <div id="event_div" style="justify-content: center; color: #111!important;" class="flexc">
         <div id="left_event">
-          <img id="event_img" src="./img/math_club.jpeg"
-            style="padding-bottom: 50px; max-height: 80vh; max-width: 80vw; padding-right: 3vw;">
+          <img id="event_img" src="./img/math_club.jpeg">
         </div>
         <div id="right_event">
           <p>
           <ul>
             <li><span style="font-weight: 600;">Maximum of three members</span> in a team.</li>
-            <li>Registration fee is Rs. 200 per team. The registration amount can be paid either online using UPI or
+            <li>Registration fee is Rs. 250 per team. The registration amount can be paid either online using UPI or
               on-spot on the day of the symposium</li>
             <li>Before registering in the google form, kindly make your team and then follow the link. Only one member
               must register per team with all
@@ -269,16 +384,16 @@
               by our volunteers and after the end of each round you will be notified your scores.
             </li>
             <li>Register now using the <span style="font-weight: 600;"><a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLScIq7WFKP4QWD7iZf9L3dAdOGiQXYnvJ0-rDFRmqB0NLILMpQ/viewform">Google
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
                   Form</a></span></li>
-            <li><span style="font-weight: 600;">The total Cash price worth Rs. 50,000.</span></li>
+            <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
           </ul>
           </p>
-          <h1 style="text-align: center">Registrations closed!!</h1>
+          <!-- <h1 style="text-align: center">Registrations closed!!</h1> -->
         </div>
       </div>
 
-      <button class="collapsible">RAPID FIRE - The flagship event of Exlog 2022</button>
+      <button class="collapsible">RAPID FIRE - The flagship event of Exlog</button>
       <div class="content">
         <br>
         <p>
@@ -298,12 +413,13 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-          <b>1 : </b>Aravind Kannan Rathinasabapathi - 6382833283<br><br>
-          <b>2 : </b>Sriganesh - 8610420684<br><br>
-          <b>3 : </b>Vahini M - 9025756533<br><br>
-          <b>4 : </b>Shakti Varsha S - 9840672390<br><br>
-          <b>5 : </b>Aishwarya .B - 9003621612<br><br>
-          <b>6 : </b>Aishwarya .K - 7795164050<br><br>
+          <b>Heads:</b><br><br>
+          <b>1 : </b>Aishwarya B - 9003621612<br><br>
+          <b>2 : </b>Aishwarya K - 7795164050<br><br>
+          <b>Deputy Head:</b><br><br>
+          <b>3 : </b>Neha Sharma - 6364446412<br><br>
+
+
         </h4>
       </div>
 
@@ -334,8 +450,11 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-          <b>1 : </b>Jaswandt Raja S - 9360398472<br><br>
-          <b>2 : </b>Dhanya Srinivasan - 9080082025<br><br>
+          <b>Heads:</b><br><br>
+          <b>1 : </b>Hemanthh Ram - 6385877431<br><br>
+          <b>2 : </b>Hrishik - 9790826447<br><br>
+          <b>Deputy Head:</b><br><br>
+          <b>1 : </b>Induja - 9444271705<br><br>
         </h4>
       </div>
 
@@ -359,14 +478,17 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-          <b>1 : </b>Dharshan - 9789015214<br><br>
-          <b>2 : </b>Shri Thrisha - 9384691387<br><br>
-          <b>3 : </b>Pradheep - 8667665048<br><br>
-          <b>4 : </b>Maheshwari - 94455 76963<br><br>
+
+          <b>Heads:</b><br><br>
+          <b>1 : </b>Prasanna - 7639025362<br><br>
+          <b>2 : </b>Maheshwari M - 9445576963<br><br>
+          <b>Deputy Head:</b><br><br>
+          <b>1 : </b>Aishwarya - 9994702933<br><br>
+
         </h4>
       </div>
 
-      <button class="collapsible">MATHLETES - Test your speeds</button>
+      <!-- <button class="collapsible">MATHLETES - Test your speeds</button>
       <div class="content">
         <br>
         <p>The game is basically dependent on how quickly your team can finish all the three tasks and how correctly you
@@ -406,7 +528,7 @@
           <b>3 : </b>Sharmila - 9585126000<br><br>
           <b>4 : </b>Mathivathani - 6381935913<br><br>
         </h4>
-      </div>
+      </div> -->
 
       <button class="collapsible">RIDDLE CRYPT - Solve to find the way out of the maze </button>
       <div class="content">
@@ -432,11 +554,11 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-          <b>1 : </b>R Dhanush Babu - 8248369664<br><br>
-          <b>2 : </b>Swetha - 7012695810<br><br>
-          <b>3 : </b>Akshileshwar - 8680041281<br><br>
-          <b>4 : </b>Shalinie - 7339512898<br><br>
-          <b>5 : </b>Vaishnavi B - 9600080078<br><br>
+          <b>Heads:</b><br><br>
+          <b>1 : </b>Krithika - 9912607465<br><br>
+          <b>2 : </b>Akileshwar - 8680041281<br><br>
+          <b>Deputy Head:</b><br><br>
+          <b>1 : </b>Aman - 8882498451<br><br>
         </h4>
       </div>
 
@@ -470,13 +592,16 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-          <b>1 : </b>Deepananth K - 7598677650<br><br>
-          <b>2 : </b>Gokhul P S - 6383532069<br><br>
+          <b>Heads:</b><br><br>
+          <b>1 : </b>Nivetha - 7092747808<br><br>
+          <b>2 : </b>Geetha - 6381297075<br><br>
+          <b>Deputy Head:</b><br><br>
+          <b>1 : </b>Pooja - 7695832205<br><br>
         </h4>
       </div>
 
-      <button class="collapsible">RAPID FIRE</button>
-      <div class="content">
+      <!-- <button class="collapsible">RAPID FIRE</button> -->
+      <!-- <div class="content">
         <br>
         <p>Mathathahta.... wait it sounds confusing right? <br>
           If the name itself sounds confusing then how will the event be.... <br>
@@ -493,7 +618,7 @@
           The winners will be judges based on a algorithm which involves your game score and your solve time <br>
           Wanna know what games it is...then come visit us on Feb 22<br>
         </p>
-      </div>
+      </div> -->
 
       <script>
         var coll = document.getElementsByClassName("collapsible");
@@ -591,81 +716,7 @@
     </section>#portfolio -->
 
 
-    <section id="team">
 
-      <div class="container wow fadeIn">
-        <div class="section-header">
-          <h3 class="section-title section-description" style="color: #111!important;">Core Committee</h3>
-
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <h3 style="text-align: left;" class="abouts">Faculty Incharge</h3>
-              <div class="">
-                <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;color: #111;">
-                  <a href="https://www.ssn.edu.in/staff-members/dr-r-sundareswaran/" style="color: #111;">Dr. R.
-                    Sundareswaran (ASP)</a>
-                  <br>
-                  <a href="https://www.ssn.edu.in/staff-members/dr-m-shanmugapriya/" style="color: #111;">Dr. M.
-                    Shanmugapriya (AP)</a>
-                  <br>
-                  <a href="https://www.ssn.edu.in/staff-members/dr-t-m-rajalaxmi/" style="color: #111;">Dr. T. M.
-                    Rajalaxmi (AP)</a>
-                  <br>
-                  <a href="https://www.ssn.edu.in/staff-members/dr-s-sampath-kumar/" style="color: #111;">Dr. S. Sampath
-                    Kumar (AP)</a>
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="box">
-              <h3 style="text-align: left;" class="abouts">Event Coordinators</h3>
-              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem">
-                <!-- <a href="https://wa.me/919444679827" style="color: #111;">Aishwarya - 3rd year BME</a>
-                    <br>
-                  <a href="https://wa.me/918680041281" style="color: #111;">Akileshwar G - 2nd year BME</a>
-                    <br>
-                  <a href="https://wa.me/918754489760" style="color: #111;">Anirudh A - 3rd year CSE</a>
-                    <br>  -->
-                <a href="https://wa.me/916382833283" style="color: #111;">Aravind kannan - 3rd year CSE</a>
-                <br>
-                <!-- <a href="https://wa.me/918248369664" style="color: #111;">Dhanush Babu R - 3rd year BME</a>
-                    <br>
-                  <a href="https://wa.me/916379557926" style="color: #111;">Harisaran G - 3rd year IT</a>
-                    <br>
-                  <a href="https://wa.me/918667030250" style="color: #111;">Preethi - 2nd year CSE</a>
-                    <br> -->
-                <a href="https://wa.me/919840672390" style="color: #111;">Shakthi Varsha S - 3rd year BME</a>
-                <br>
-                <!-- <a href="https://wa.me/919150766728" style="color: #111;">Shiva G - 3rd year CSE</a>
-                    <br>
-                  <a href="https://wa.me/919384691387" style="color:#111">Shri Thrisha - 2nd year BME</a>
-                    <br> -->
-                <a href="https://wa.me/918610420684" style="color:#111">Sriganesh R - 3rd year EEE</a>
-                <br>
-                <!-- <a href="https://wa.me/917012695810" style="color: #111;">Swetha - 2nd year CSE</a>
-                    <br> -->
-                <a href="https://wa.me/919025756533" style="color: #111;">Vahini M - 3rd year BME</a>
-                <br>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="box">
-              <h3 id="gal" style="text-align: left;" class="abouts">Website</h3>
-              <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;">
-                <a href="https://github.com/sriganeshr-sudo" style="color:#111">Sriganesh R - 3rd year EEE</a>
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
 
     <section id="contact">
       <div class="container wow fadeInUp">
@@ -680,47 +731,32 @@
           <div class="flexc">
             <div class="textf">
               <br>
-              <h4>Aishwarya</h4>
-              <h4><a href="tel:+919444679827">9444679827</a></h4>
+              <h4>Shri Thrisha</h4>
+              <h4><a href="tel:+919384691387">9384691387</a></h4>
               <br>
-              <h4>Aravind Kannan</h4>
-              <h4><a href="tel:+916382833283">6382833283</a></h4>
+              <h4>Keerthivasan M</h4>
+              <h4><a href="tel:+919944937594">9944937594</a></h4>
               <br>
             </div>
             <div class="textf">
               <br>
-              <h4>Dhanush Babu R</h4>
-              <h4><a href="tel:+918248369664">8248369664</a></h4>
+              <h4>Prasanna</h4>
+              <h4><a href="tel:+917639025362">7639025362</a></h4>
               <br>
-              <h4>Preethi</h4>
+              <h4>Dhanya</h4>
+              <h4><a href="tel:+919080082025">9080082025</a></h4>
+              <br>
+            </div>
+            <div class="textf">
+              <br>
+              <h4>Preethi B</h4>
               <h4><a href="tel:+918667030250">8667030250</a></h4>
               <br>
             </div>
             <div class="textf">
               <br>
-              <h4>Shakti Varsha S</h4>
-              <h4><a href="tel:9840672390">9840672390</a></h4>
-              <br>
-              <h4>Shri Thrisha</h4>
-              <h4><a href="tel:+919384691387">9384691387</a></h4>
-              <br>
-            </div>
-            <div class="textf">
-              <br>
-              <h4>Sriganesh R</h4>
-              <h4><a href="tel:+918610420684">8610420684</a></h4>
-              <br>
-              <h4>Swetha</h4>
-              <h4><a href="tel:+917012695810">7012695810</a></h4>
-              <br>
-            </div>
-            <div class="textf">
-              <br>
-              <h4>Vahini M</h4>
-              <h4><a href="tel:+919025756533">9025756533</a></h4>
-              <br>
-              <h4>Akileshwar G</h4>
-              <h4><a href="tel:+918680041281">8680041281</a></h4>
+              <h4>Janakiram</h4>
+              <h4><a href="tel:+919566912301">9566912301</a></h4>
               <br>
             </div>
           </div>
@@ -765,7 +801,7 @@
       <div class="credits">
 
         Designed by Kishore &amp; Mano <br>
-        Maintained by Sriganesh &amp; Aravind
+        Maintained by Pranav &amp; Sanjai Balajee <br>
       </div>
     </div>
   </footer><!-- #footer -->
