--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <h3 style="text-align: left;" class="abouts">Event Coordinators</h3>
+              <h3 style="text-align: left;" class="abouts">Overall Coordinators</h3>
               <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem">
                 <a href="https://wa.me/917639025362" style="color: #111;">Prasanna - 3rd year CHEM</a>
                 <br>
@@ -199,11 +199,11 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-lg-4 col-md-2 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
               <h3 id="gal" style="text-align: left;" class="abouts">Website</h3>
               <p style="text-align: left;font-weight: 500; font-size: 20px;line-height: 2.5rem;">
-                <a href="https://github.com/vspr14" style="color:#111">V S Pranav - 2nd year CSE</a>
+                <a href="https://github.com/vspr14" style="color:#111">V S Pranav - 2nd year CSE</a><br>
                 <a href="https://github.com/vspr14" style="color:#111">Sanjai Balajee - 2nd year CSE</a>
               </p>
             </div>
@@ -414,12 +414,13 @@
         <h4>
           <b>Contact Details:-</b><br><br>
           <b>Heads:</b><br><br>
-          <b>1 : </b>Aishwarya B - 9003621612<br><br>
-          <b>2 : </b>Aishwarya K - 7795164050<br><br>
+          <b>1: </b>Aishwarya B - 9003621612<br><br>
+          <b>2: </b>Aishwarya K - 7795164050<br><br>
           <b>Deputy Head:</b><br><br>
-          <b>3 : </b>Neha Sharma - 6364446412<br><br>
-
-
+          <b>1: </b>Neha Sharma - 6364446412<br><br>
+          <b>Volunteers:</b><br><br>
+          <b>1: </b>Neeharika - 9150022815<br><br>
+          <b>2: </b>Suryaprakash - 7305235090<br><br>
         </h4>
       </div>
 
@@ -451,10 +452,14 @@
         <h4>
           <b>Contact Details:-</b><br><br>
           <b>Heads:</b><br><br>
-          <b>1 : </b>Hemanthh Ram - 6385877431<br><br>
-          <b>2 : </b>Hrishik - 9790826447<br><br>
+          <b>1: </b>Hemanthh Ram - 6385877431<br><br>
+          <b>2: </b>Hrishik - 9790826447<br><br>
           <b>Deputy Head:</b><br><br>
-          <b>1 : </b>Induja - 9444271705<br><br>
+          <b>1: </b>Induja - 9444271705<br><br>
+          <b>Volunteers:</b><br><br>
+          <b>1: </b>Sandhiya - 6374043599<br><br>
+          <b>2: </b>Madhav - 9445471561<br><br>
+          <b>3: </b>Naveed Buhari - 9080384471<br><br>
         </h4>
       </div>
 
@@ -478,13 +483,15 @@
         </h4>
         <h4>
           <b>Contact Details:-</b><br><br>
-
           <b>Heads:</b><br><br>
-          <b>1 : </b>Prasanna - 7639025362<br><br>
-          <b>2 : </b>Maheshwari M - 9445576963<br><br>
+          <b>1: </b>Prasanna - 7639025362<br><br>
+          <b>2: </b>Maheshwari M - 9445576963<br><br>
           <b>Deputy Head:</b><br><br>
-          <b>1 : </b>Aishwarya - 9994702933<br><br>
-
+          <b>1: </b>Aishwarya - 9994702933<br><br>
+          <b>Volunteers:</b><br><br>
+          <b>1: </b>Sharon Roshni - 7305640365<br><br>
+          <b>2: </b>Aishwarya - 9994702933<br><br>
+          <b>3: </b>Sanjnaa S - 9789893371<br><br>
         </h4>
       </div>
 
@@ -555,10 +562,14 @@
         <h4>
           <b>Contact Details:-</b><br><br>
           <b>Heads:</b><br><br>
-          <b>1 : </b>Krithika - 9912607465<br><br>
-          <b>2 : </b>Akileshwar - 8680041281<br><br>
+          <b>1: </b>Krithika - 9912607465<br><br>
+          <b>2: </b>Akileshwar - 8680041281<br><br>
           <b>Deputy Head:</b><br><br>
-          <b>1 : </b>Aman - 8882498451<br><br>
+          <b>1: </b>Aman - 8882498451<br><br>
+          <b>Volunteers:</b><br><br>
+          <b>1: </b>Yaser - 9944403428<br><br>
+          <b>2: </b>Karthik Vijayakumar - 8300683073<br><br>
+          <b>3: </b>Jeya Marshalin - 6382671285<br><br>
         </h4>
       </div>
 
@@ -593,10 +604,13 @@
         <h4>
           <b>Contact Details:-</b><br><br>
           <b>Heads:</b><br><br>
-          <b>1 : </b>Nivetha - 7092747808<br><br>
-          <b>2 : </b>Geetha - 6381297075<br><br>
+          <b>1: </b>Nivetha - 7092747808<br><br>
+          <b>2: </b>Geetha - 6381297075<br><br>
           <b>Deputy Head:</b><br><br>
-          <b>1 : </b>Pooja - 7695832205<br><br>
+          <b>1: </b>Krithiukha - 8248010588<br><br>
+          <b>Volunteers:</b><br><br>
+          <b>1: </b>Ambiga - 7010328053<br><br>
+          <b>2: </b>Bruhati - 9442219036<br><br>
         </h4>
       </div>
 
@@ -752,14 +766,14 @@
               <h4>Preethi B</h4>
               <h4><a href="tel:+918667030250">8667030250</a></h4>
               <br>
-            </div>
-            <div class="textf">
-              <br>
               <h4>Janakiram</h4>
               <h4><a href="tel:+919566912301">9566912301</a></h4>
               <br>
             </div>
+
+
           </div>
+
 
           <div class="headerText text-center">
             <h2 class="">Venue</h2>
