--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>SSN EXLOG</h1>
+      <h1 class="h1max">SSN ExLog</h1>
       <h2><b>National Level Mathematical Symposium</b></h2>
       <!-- <div style="display: flex;">
         <a href="https://drive.google.com/file/d/1q5GuIeIxpu2l4Xs6w08-Z8cJuc4gBh6h/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; border-radius: 10px;">
@@ -236,14 +236,14 @@
           </div>
         </div>
       </div>
-      <div class="container wow fadeIn">
+      <!-- <div class="container wow fadeIn">
         <div class="col-lg-auto col-md-6 wow fadeInUp" data-wow-delay="0.9s">
           <div class="section-header">
             <h3 class="section-title section-description" style="color: #111!important; background-color: transparent;">
               Overall</h3>
           </div>
-        </div>
-        <div class="row">
+        </div> -->
+      <!-- <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
               <h3 style="text-align: left;" class="abouts">Faculty Incharge</h3>
@@ -290,7 +290,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </section>
     <!--
