changed volunteer details

--- a/index.html
+++ b/index.html
@@ -64,17 +64,18 @@
     <div class="hero-container">
       <h1 class="h1max">SSN ExLog</h1>
       <h2><b>National Level Mathematical Symposium</b></h2>
-      <!-- <div style="display: flex;">
-        <a href="https://drive.google.com/file/d/1q5GuIeIxpu2l4Xs6w08-Z8cJuc4gBh6h/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; border-radius: 10px;">
-          Rulebook
+      <div style="display: flex;">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform"
+          style="background-color: slategray; font-weight: 500; color: white; padding: 8px; border-radius: 10px;">
+          Register Now!
         </a>
-        <a href="https://drive.google.com/file/d/14Hc4OUcEUAUoXjI8Ey7Ngox7XcEztDU7/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
+        <!-- <a href="https://drive.google.com/file/d/14Hc4OUcEUAUoXjI8Ey7Ngox7XcEztDU7/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Program Schedule
         </a>
         <a href="https://drive.google.com/file/d/1PS6_MxPC_afS3hvKfZDpsF681ycKYFSu/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Inaugural Invitation
-        </a>
-      </div> -->
+        </a> -->
+      </div>
     </div>
   </section><!-- #hero -->
 
@@ -635,8 +636,8 @@
           <b>Deputy Head:</b><br><br>
           <b>1: </b>Krithiukha - 8248010588<br><br>
           <b>Volunteers:</b><br><br>
-          <b>1: </b>Ambiga - 7010328053<br><br>
-          <b>2: </b>Bruhati - 9442219036<br><br>
+          <!-- <b>1: </b>Ambiga - 7010328053<br><br> -->
+          <b>1: </b>Bruhati - 9442219036<br><br>
         </h4>
       </div>
 
