--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#">Invitation</a></li>
+          <li><a
+              href="https://drive.google.com/file/d/19ldlPFFOT3h8iCUZdyD5Y-jQq7Q4Q9ph/view?usp=sharing">Invitation</a>
+          </li>
           <li><a href="https://drive.google.com/file/d/1zUOc9_a4IeTLpqweRoJ6fgL7dYJHPh62/view?usp=sharing">Rule Book</a>
           </li>
 
