--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 different channels of MS Teams
                 by our volunteers and after the end of each round you will be notified your scores.
               </li>
-              <li>Register now using the <span style="font-weight: 600;"><a
+              <li>Register now using the <span style="font-weight: 600;"><a class="aform"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
                     Form</a></span></li>
               <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
