--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@
           <b>Deputy Head:</b><br><br>
           <b>1: </b>Induja - 9444271705<br><br>
           <b>Volunteers:</b><br><br>
-          <b>1: </b>Sandhiya - 6374043599<br><br>
-          <b>2: </b>Madhav - 9445471561<br><br>
-          <b>3: </b>Naveed Buhari - 9080384471<br><br>
+          <!-- <b>1: </b>Sandhiya - 6374043599<br><br> -->
+          <b>1: </b>Madhav - 9445471561<br><br>
+          <b>2: </b>Naveed Buhari - 9080384471<br><br>
         </h4>
       </div>
 
