--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
           style="background-color: slategray; font-weight: 500; color: white; padding: 8px; border-radius: 10px;">
           Register Now!
         </a>
-        <!-- <a href="https://drive.google.com/file/d/14Hc4OUcEUAUoXjI8Ey7Ngox7XcEztDU7/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
+        <a href="https://drive.google.com/file/d/1lcO1zW4fdYzaMVZBobH6Vw1n2yMGHDuG/view?usp=sharing"
+          style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Program Schedule
         </a>
-        <a href="https://drive.google.com/file/d/1PS6_MxPC_afS3hvKfZDpsF681ycKYFSu/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
+        <!-- <a href="https://drive.google.com/file/d/1PS6_MxPC_afS3hvKfZDpsF681ycKYFSu/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Inaugural Invitation
         </a> -->
       </div>
